# united-states-code

./: .gitignore  BILLS-MIRROR-NOTES.md  LICENSE  README.md  THE-LAW-README.md  USC-MIRROR-NOTES.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
.github/workflows/: bills-sync.yml  sync.yml
bills/: .last-sync
bills/119/: index-30d.json  index-7d.json  index.json
src/congress_bills_mirror/: client.py  sync.py  text.py
src/http_retry/: fetch.py
src/uscode_mirror/: chunk.py  download.py  release_points.py  render_json.py  render_txt.py  sync.py
tests/: test_chunk.py  test_congress_client.py  test_congress_sync.py  test_congress_text.py  test_download.py  test_http_retry.py  test_release_points.py  test_render_json.py  test_render_txt.py  test_smoke.py  test_sync.py
usc/: .release-point
usc/1/: 1.json  1.txt  1.xml  101.json  101.txt  101.xml  102.json  102.txt  102.xml  103.json  103.txt  103.xml  104.json  104.txt  104.xml  105.json  105.txt  105.xml  106.json  106.txt  106.xml  106a.json  106a.txt  106a.xml  106b.json  106b.txt  106b.xml  107.json  107.txt  107.xml  108.json  108.txt  108.xml  109.json  109.txt  109.xml  110.json  110.txt  110.xml  111.json  (+77 more)
usc/10/: 10001.json  10001.txt  10001.xml  1001.json  1001.txt  1001.xml  101.json  101.txt  101.xml  10101.json  10101.txt  10101.xml  10102.json  10102.txt  10102.xml  10102a.json  10102a.txt  10102a.xml  10103.json  10103.txt  10103.xml  10104.json  10104.txt  10104.xml  10105.json  10105.txt  10105.xml  10106.json  10106.txt  10106.xml  10107.json  10107.txt  10107.xml  (+10521 more)
(+144152 files in other folders)
