[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uscode-mirror"
version = "0.1.0"
description = "Sync job that mirrors the United States Code (USLM XML) into per-citation XML/JSON/TXT files"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
uscode-mirror-sync = "uscode_mirror.sync:main"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true

[tool.ruff]
target-version = "py313"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
